# mdget

./: .gitignore  .hyalo.toml  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  test_img.rs
.claude/agents/: rust-engineer.md
.claude/rules/: knowledgebase.md
.claude/skills/dogfood/: SKILL.md
.claude/skills/hyalo/: SKILL.md
.claude/skills/hyalo-tidy/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/mdget-cli/: Cargo.toml
crates/mdget-cli/src/: main.rs
crates/mdget-cli/tests/e2e/: mod.rs
crates/mdget-cli/tests/mcp/: mod.rs
crates/mdget-core/: Cargo.toml
crates/mdget-core/src/: crawl.rs  extract.rs  fetch.rs  filename.rs  lib.rs  links.rs  normalize.rs  robots.rs  sitemap.rs
crates/mdget-mcp/: Cargo.toml
crates/mdget-mcp/src/: lib.rs
kb/: decision-log.md  roadmap.md
kb/.obsidian/: community-plugins.json  workspace.json
kb/.obsidian/plugins/vault-nickname/: data-shared.json  data.json
kb/iterations/: iteration-02-core-fetch.md  iteration-02a-dogfood-fixes.md  iteration-02b-output-cleanup.md  iteration-03-batch-and-local.md  iteration-04-output-control.md  iteration-05-robustness.md  iteration-05b-review-fixes.md  iteration-06-mcp-server.md  iteration-07-crawling.md  iteration-07a-crawl-engine.md  iteration-07b-robots-sitemap.md  iteration-08-review.md  iteration-09-dogfood-fixes.md  iteration-1-project-init.md  iteration-10-dogfood-review.md  iteration-11-dogfood-4-fixes.md  iteration-12-crawl-prefix-bug.md
kb/iterations/done/: iteration-02-core-fetch.md  iteration-02a-dogfood-fixes.md  iteration-02b-output-cleanup.md  iteration-04-output-control.md  iteration-05-robustness.md  iteration-07-crawling.md  iteration-07a-crawl-engine.md  iteration-07b-robots-sitemap.md  iteration-08-dogfood-review.md  iteration-08-review.md  iteration-09-dogfood-fixes.md  iteration-11-dogfood-4-fixes.md
kb/research/: benchmark-results-2026-05-03.md  cmux-mcp-dogfood-pattern.md  competitive-landscape.md  dom-query-escaping.md  future-direction.md  html-to-markdown-crates.md  positioning-cross-agent.md  token-usage-benchmark.md
templates/: skill-mdget.md
