[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/mdget-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ractive/mdget"

[workspace.dependencies]
# Internal crates
mdget-core = { path = "crates/mdget-core", version = "0.1.0" }
mdget-mcp = { path = "crates/mdget-mcp", version = "0.1.0" }

# External dependencies
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
assert_cmd = "2"
clap = "4"
dom_smoothie = "0.17"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate", "charset"] }
serde = { version = "1", features = ["derive"] }
mockito = "1"
texting_robots = "0.2"
quick-xml = { version = "0.37", features = ["serialize"] }
tempfile = "3"
rmcp = "1.6"
serde_json = "1"
tokio = "1"
url = "2"

[workspace.lints.clippy]
# Enable the full pedantic group, then allow lints we intentionally skip.
pedantic = { level = "warn", priority = -1 }

# Intentionally allowed — not worth the noise/churn:
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
