[package]
name = "mdget-cli"
description = "CLI for mdget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "mdget"
path = "src/main.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[lints]
workspace = true

[dependencies]
mdget-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
slug = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
